Refactor stock filtering to use .toList() method
Updated stock filtering to use .toList() for compliance.