@@ -9,7 +9,6 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Controller
 @RequestMapping("/admin")
@@ -24,10 +23,10 @@ public class AdminController {
         // 🔹 Obtener todos los celulares UNA sola vez
         List<Celular> lista = celularService.listarTodos();
 
-        // 🔹 Filtrar stock bajo (< 3)
+        // 🔹 Filtrar stock bajo (< 3) usando .toList() para cumplir con la normativa
         List<Celular> stockBajo = lista.stream()
                 .filter(c -> c.getStock() < 3)
-                .collect(Collectors.toList());
+                .toList();
 
         // 🔹 Enviar datos a la vista
         model.addAttribute("alertasStock", stockBajo);
